--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>💾🌲</title>
+    <title>🌲 Disk Tree</title>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script crossorigin src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -11,7 +11,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"></link>
     <link rel="icon"
           type="image/png"
-          href="/assets/favicon.ico">
+          href="/assets/disk-emoji.ico">
 </head>
 <body>
 <div id="root">Hello World!</div>
