--- a/www/index.html
+++ b/www/index.html
@@ -6,12 +6,10 @@
     <script crossorigin src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-plotly.js@1.0.2/dist/create-plotly-component.js"></script>
     <script src="./dist/bundle.js"></script>
-    <link href="/assets/index.css" type="text/css" rel="stylesheet"></link>
-<!--    <link href="/assets/citibike.css" type="text/css" rel="stylesheet"></link>-->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"></link>
-    <link rel="icon"
-          type="image/png"
-          href="/assets/disk-emoji.ico">
+    <link href="/assets/index.css" type="text/css" rel="stylesheet"/>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"/>
+    <link rel="icon" type="image/png" href="/assets/disk-emoji.ico">
+    <script src="/assets/font-awesome.js"></script>
 </head>
 <body>
 <div id="root">Hello World!</div>
