--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <head>
     <title>🌲 Disk Tree</title>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-plotly.js@1.0.2/dist/create-plotly-component.js"></script>
+    <script crossorigin src="/assets/react.development.js"></script>
+    <script crossorigin src="/assets/react-dom.development.js"></script>
+    <script crossorigin src="/assets/plotly-latest.min.js"></script>
+    <script crossorigin src="/assets/create-plotly-component.js"></script>
+    <script crossorigin src="/assets/popper.min.js"></script>
     <script src="./dist/bundle.js"></script>
-    <link href="/assets/index.css" type="text/css" rel="stylesheet"/>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"/>
+    <link href="/assets/bootstrap.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"/>
+    <link rel="stylesheet" href="/assets/css" />
+    <link rel="stylesheet" href="/assets/icon" />
     <link rel="icon" type="image/png" href="/assets/disk-emoji.ico">
     <script src="/assets/font-awesome.js"></script>
+    <link href="/assets/index.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div id="root">Hello World!</div>
